<resources>
<!--  Shared  -->
    <string name="app_name" translatable="false">Note.pro</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

<!--  Preferences  -->
    <string name="enable_autodelete_key">enable_autodelete</string>
    <string name="enable_autodelete">Enable autodelete</string>
    <string name="enable_autodelete_summary">Enable or disable deletion of notes after the established timeout</string>

    <string name="autodelete_timeout_key">autodelete_timeout</string>
    <string name="autodelete_timeout">Autodelete timeout</string>
    <string name="autodelete_timeout_summary">Time, after which note will be deleted</string>
    <string name="autodelete_timeout_one_hour">One hour</string>
    <string name="autodelete_timeout_one_day">One day</string>
    <string name="autodelete_timeout_one_week">One week</string>
    <string name="autodelete_timeout_one_month">One month</string>
    <string name="autodelete_timeout_six_months">Six months</string>
    <string name="autodelete_timeout_one_year">One year</string>
    <string-array name="autodelete_timeout_entries">
        <item>@string/autodelete_timeout_one_hour</item>
        <item>@string/autodelete_timeout_one_day</item>
        <item>@string/autodelete_timeout_one_week</item>
        <item>@string/autodelete_timeout_one_month</item>
        <item>@string/autodelete_timeout_six_months</item>
        <item>@string/autodelete_timeout_one_year</item>
    </string-array>

    <string name="dark_theme_key">dark_theme</string>
    <string name="dark_theme">Dark theme</string>

    <string name="onboarding_done_key">onboarding_done</string>
    <string name="enabled_features_key">enabled_features</string>
    <string name="enabled_features">Enabled features</string>
    <string name="note_not_found">Note not found</string>
    <string name="edit">Edit</string>
    <string name="rename_note">Rename note</string>
    <string name="create_note">Create note</string>


<!--  Onboarding  -->
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>

    <string name="onboarding_first_description">To add a new note, click the «+» button</string>

    <string name="shopping_list">Shopping list</string>
    <string name="home">Home</string>
    <string name="onboarding_second_delete_description">Swipe a note to left or right to mark it as deleted</string>
    <string name="backlog_analysis">Backlog analysis</string>
    <string name="time_15_45">15:45</string>
    <string name="work">Work</string>
    <string name="onboarding_second_restore_description">Click the blue trash button to restore a note</string>

    <string name="h1">H1</string>
    <string name="h2">H2</string>
    <string name="h3">H3</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="onboarding_third_description">Use shortcut buttons on the editor screen. All your work is autosaved</string>

<!--  NotesListFragment  -->
    <string name="add_note">Add note</string>
    <string name="note_moved_to_trash">Note moved to trash</string>
    <string name="undo">Undo</string>
    <string name="show_deleted">Show deleted</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="note_title">Note title</string>
    <string name="empty_note">Empty note</string>
    <string name="empty_list_message">There is no one note in this list. Disable filters or make a new one</string>
    <string name="too_long_title">Too long title</string>
    <string name="title_is_required">Title is required</string>
    <string name="delete_note">Delete note?</string>
    <string name="It_cant_be_undone">It can\'t be undone</string>
    <string name="create_category">Create category</string>
    <string name="plus_symbol" translatable="false">+</string>
    <string name="delete">Delete</string>
    <string name="rename_category">Rename category</string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <string name="edit_note">Edit note</string>
    <string name="delete_category">Delete category?</string>
    <string name="delete_category_message">This cannot be undone. Notes with this category will not be deleted</string>
</resources>