<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboarding.OnboardingFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/onboardingSecondDeleteItemBackground"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="12dp"
            app:cardForegroundColor="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:strokeColor="?colorOnPrimary"
            app:strokeWidth="1dp" />

        <View
            android:id="@+id/onboardingSecondDeleteSwipeBackground"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="1dp"
            android:background="@color/swipe_red"
            android:elevation="12dp"
            app:layout_constraintBottom_toBottomOf="@id/onboardingSecondDeleteItemBackground"
            app:layout_constraintStart_toStartOf="@id/onboardingSecondDeleteItemBackground"
            app:layout_constraintTop_toTopOf="@id/onboardingSecondDeleteItemBackground" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:elevation="12dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@id/onboardingSecondDeleteItemBackground"
            app:layout_constraintStart_toStartOf="@id/onboardingSecondDeleteItemBackground"
            app:layout_constraintTop_toTopOf="@id/onboardingSecondDeleteItemBackground"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/onboardingSecondDeleteTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:elevation="12dp"
            android:text="@string/shopping_list"
            android:textColor="?colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@id/onboardingSecondDeleteItemBackground"
            app:layout_constraintStart_toEndOf="@id/onboardingSecondDeleteSwipeBackground"
            app:layout_constraintTop_toTopOf="@id/onboardingSecondDeleteItemBackground" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            android:text="@string/home"
            android:textColor="?colorOnPrimary"
            app:layout_constraintStart_toStartOf="@id/onboardingSecondDeleteTitle"
            app:layout_constraintTop_toBottomOf="@id/onboardingSecondDeleteTitle" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/onboardingSecondRestoreItemBackground"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="12dp"
            android:elevation="12dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="12dp"
            app:cardForegroundColor="?colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/onboardingSecondRestoreDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onboardingSecondDeleteDescription"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/onboardingSecondRestoreBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:elevation="12dp"
            android:padding="12dp"
            android:src="@drawable/ic_restore"
            android:tint="?colorControlNormal"
            app:layout_constraintBottom_toBottomOf="@id/onboardingSecondRestoreItemBackground"
            app:layout_constraintStart_toStartOf="@id/onboardingSecondRestoreItemBackground"
            app:layout_constraintTop_toTopOf="@id/onboardingSecondRestoreItemBackground" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/onboardingSecondRestoreTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            android:text="@string/backlog_analysis"
            android:textColor="?colorOnPrimary"
            app:layout_constraintEnd_toStartOf="@id/itemNoteUpdatedAt"
            app:layout_constraintStart_toEndOf="@id/onboardingSecondRestoreBtn"
            app:layout_constraintTop_toTopOf="@id/onboardingSecondRestoreBtn" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemNoteUpdatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:elevation="12dp"
            android:text="@string/time_15_45"
            android:textColor="?colorOnPrimary"
            app:layout_constraintBaseline_toBaselineOf="@id/onboardingSecondRestoreTitle"
            app:layout_constraintEnd_toEndOf="@id/onboardingSecondRestoreItemBackground" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemNoteBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            android:text="@string/work"
            android:textColor="?colorOnPrimary"
            app:layout_constraintStart_toEndOf="@id/onboardingSecondRestoreBtn"
            app:layout_constraintTop_toBottomOf="@id/onboardingSecondRestoreTitle" />

        <TextView
            android:id="@+id/onboardingSecondDeleteDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="62dp"
            android:paddingTop="12dp"
            android:paddingBottom="32dp"
            android:text="@string/onboarding_second_delete_description"
            android:textAlignment="center"
            android:textColor="?colorOnPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/onboardingSecondRestoreItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onboardingSecondDeleteItemBackground" />

        <TextView
            android:id="@+id/onboardingSecondRestoreDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="62dp"
            android:paddingTop="12dp"
            android:text="@string/onboarding_second_restore_description"
            android:textAlignment="center"
            android:textColor="?colorOnPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onboardingSecondRestoreItemBackground" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
